--- a/extensions.json
+++ b/extensions.json
@@ -54,13 +54,22 @@
       {"name": "BludIsAnLemon", "url": "https://scratch.mit.edu/users/BludIsAnLemon/"}
     ]
   },
-{
+  {
   "title": "Live Keyboard Input",
   "img": null,
   "description": "Get keyboard input from the user, as if they were typing in a textbox!",
   "url": "extensions/golbo/LiveKeyboard.js",
   "creator": [
-    {"name": "Golbo", "url": "https://ffghdfh.itch.io"}
+    {"name": "golbo", "url": "https://ffghdfh.itch.io"}
   ]
-}
+  },
+  {
+    "title": "URL Music extension",
+    "img": null,
+    "description": "Play, pause, seek, set the volume and get data about songs from URL-s!".
+    "url": "extensions/golbo/URL_music.js",
+    "creator": [
+      {"name": "golbo", "url": "https://ffghdfh.itch.io"}
+  ]
+  }
 ]
