--- a/extensions.json
+++ b/extensions.json
@@ -108,7 +108,9 @@
     "url": "extensions/Lemon/Waveforms.js",
     "sandboxed": false,
     "creator": [
-      {"name": "BludIsAnLemon", "url": "https://scratch.mit.edu/users/BludIsAnLemon/"}
+      {"name": "BludIsAnLemon", "url": "https://scratch.mit.edu/users/BludIsAnLemon/"},
+      {"name": "Mistium", "url": "https://scratch.mit.edu/users/M1stium/"},
+      {"name": "0znzw", "url": "https://scratch.mit.edu/users/0znzw/"}
     ]
   }
 ]
