extension doesn't work sandboxed

--- a/extensions.json
+++ b/extensions.json
@@ -46,7 +46,7 @@
     "img": "images/Lemon/autoclick_detect.png",
     "description": "Easily detect auto clickers.",
     "url": "extensions/Lemon/autoclick_detect.js",
-    "sandboxed": true,
+    "sandboxed": false,
     "creator": [
       {"name": "BludIsAnLemon", "url": "https://scratch.mit.edu/users/BludIsAnLemon/"}
     ]
