change branding of my own extensions to silly software, changed link to my own website

--- a/extensions.json
+++ b/extensions.json
@@ -65,20 +65,20 @@
   "title": "Live Keyboard Input",
   "img": null,
   "description": "Get keyboard input from the user, as if they were typing in a textbox!",
-  "url": "extensions/golbo/LiveKeyboard.js",
+  "url": "extensions/silly software/LiveKeyboard.js",
   "sandboxed": true,
   "creator": [
-    {"name": "golbo", "url": "https://ffghdfh.itch.io"}
+    {"name": "silly software", "url": "https://sillysoftware.lol"}
     ]
   },
   {
     "title": "URL Music extension",
     "img": null,
     "description": "Play, pause, seek, set the volume and get data about songs from URL-s!",
-    "url": "extensions/golbo/URL_music.js",
+    "url": "extensions/silly software/URL_music.js",
     "sandboxed": true,
     "creator": [
-      {"name": "golbo", "url": "https://ffghdfh.itch.io"}
+      {"name": "golbo", "url": "https://sillysoftware.lol"}
     ]
   },
   {
@@ -86,9 +86,9 @@
     "img": "images/golbo/indexedDB.png",
     "description": "Save more than 5mb of data locally!",
     "sandboxed": false,
-    "url": "extensions/golbo/IndexedDB.js",
+    "url": "extensions/silly software/IndexedDB.js",
     "creator": [
-      {"name": "golbo", "url": "https://ffghdfh.itch.io"}
+      {"name": "golbo", "url": "https://sillysoftware.lol"}
     ]
   },
   {
